[package]
name = "hg-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "hgtui"
# path = "src/main.rs"

[dependencies]
anyhow = "1"
tui = "0.17"
crossterm = "0.23"
clap = {version = "3.1.8", features = ["derive"]}

crossbeam-channel = "0.5"
