[package]
name = "hg-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "hgtui"
# path = "src/main.rs"

[dependencies]
anyhow = "1"

tui = "0.18"

crossterm = "0.23"

clap = {version = "3.1.8", features = ["derive"]}

crossbeam-channel = "0.5"

lazy_static = "1.4"

# TODO async tokio
reqwest = { version = "0.11", features = ["blocking", "json"] }

# html parser
nipper = "0.1.9"

# regex
regex = "1.5.5"

unicode-width = "0.1.9"

chrono = "0.4.19"

better-panic = "0.3.0"
