[package]
name = "hg-tui"
version = "0.0.1"
edition = "2021"
authors = ["Jeff Xun 452914639@qq.com"]
license = "GPL-3.0-or-later"
description = "A TUI application to view www.hellogithub.com"
readme = "README.md"
homepage = "https://github.com/kaixinbaba/hg-tui"
repository = "https://github.com/kaixinbaba/hg-tui"
keywords = ["tui", "cli", "hellogithub"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name = "hgtui"
path = "src/main.rs"



[dependencies]
anyhow = "1"

thiserror = "1"

tui = "0.18"

crossterm = "0.23"

clap = {version = "3.1.8", features = ["derive"]}

crossbeam-channel = "0.5"

lazy_static = "1.4"

# TODO async tokio
reqwest = { version = "0.11", features = ["blocking", "json"] }

# html parser
nipper = "0.1.9"

# regex
regex = "1.5.5"

unicode-width = "0.1.9"

chrono = "0.4.19"

better-panic = "0.3.0"

image = "0.24.2"

webbrowser = "0.7.1"

cached = "0.34.0"
